--- a/settings.gradle
+++ b/settings.gradle
@@ -3,6 +3,9 @@ pluginManagement {
 		gradlePluginPortal()
 		maven { url 'https://repo.spring.io/plugins-release' }
 	}
+	plugins {
+		id "com.gradle.enterprise" version "3.1"
+	}
 }
 
 buildCache {
